package com.bellako.kiwi.features.users

object UsersTestTags {
    const val EMAIL_FIELD = "Login_email_field"
    const val PASSWORD_FIELD = "Login_password_field"

    const val SIGNUP_BUTTON = "Login_signup_button"
    const val LOGIN_BUTTON = "Login_login_button"
    const val ERROR_TEXT = "Login_error_text"
}