package com.bellako.kiwi.services.common

object CommonTestTags {
    const val BOTTOM_APPBAR = "common_bottom_appbar"

    const val LOADING_MODAL = "common_loading_modal"
    const val ERROR_MODAL = "common_error_modal"

    const val DASHBOARD_MODAL = "common_dashboard_modal"
    const val PERMISSIONS_REQUEST_MODAL = "common_permissions_request_modal"

    const val HOME_SCREEN = "common_home_screen"
    const val USERS_SCREEN = "common_login_screen"
    const val SETTINGS_SCREEN = "common_settings_screen"
    const val HELP_SCREEN = "common_help_screen"


}
