package com.bellako.kiwi.ui.tags

object DashboardModalTestTags {
    const val DAY_INDICATOR_PREFIX = "dashboard_day_indicator_"
    const val STEPS = "dashboard_steps"
    const val SCREEN_TIME = "dashboard_screen_time"
    const val DRAGGABLE_NODE = "dashboard_draggable_node"
    const val CALENDAR_VIEW = "dashboard_calendar_view"
    const val CALENDAR_VIEW_BUTTON = "dashboard_calendar_view_button"
    const val SELECTED_MONTH_TEXT = "dashboard_selected_month_text"
}